--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,8 +15,11 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "cookies-next": "^2.1.2",
+    "cors": "^2.8.5",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "express": "^4.18.2",
+    "googleapis": "^123.0.0",
     "lucide": "^0.263.0",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
